updated for sql

--- a/labs/beta-labs/deploy-res-edge/mssql/service.yaml
+++ b/labs/beta-labs/deploy-res-edge/mssql/service.yaml
@@ -4,10 +4,11 @@ metadata:
   name: mssql
   namespace: api
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
     app: mssql
   ports:
     - protocol: TCP
       port: 1433
       targetPort: 1433
+      nodePort: 31433
