--- a/labs/beta-labs/deploy-res-edge/.kic/k3d.yaml
+++ b/labs/beta-labs/deploy-res-edge/.kic/k3d.yaml
@@ -26,13 +26,37 @@ options:
 ports:
 - nodeFilters:
   - server:0
-  port: 443:443
+  port: 30000:30000
 - nodeFilters:
   - server:0
-  port: 80:80
+  port: 30080:30080
+- nodeFilters:
+  - server:0
+  port: 30088:30088
+- nodeFilters:
+  - server:0
+  port: 31080:31080
+- nodeFilters:
+  - server:0
+  port: 31088:31088
+- nodeFilters:
+  - server:0
+  port: 31433:31433
+- nodeFilters:
+  - server:0
+  port: 32000:32000
+- nodeFilters:
+  - server:0
+  port: 32080:32080
+- nodeFilters:
+  - server:0
+  port: 32088:32088
 registries: {}
 servers: 1
 volumes:
 - nodeFilters:
   - server:0
   volume: /prometheus:/prometheus
+- nodeFilters:
+  - server:0
+  volume: /grafana:/grafana
