add check for webv

--- a/labs/beta-labs/deploy-res-edge/.kic/check.yaml
+++ b/labs/beta-labs/deploy-res-edge/.kic/check.yaml
@@ -9,3 +9,6 @@ commands:
     - name: resedge
       short: Check ResEdge
       path: check/app
+    - name: webv
+      short: Check webv
+      path: check/webv
