add prometheus check command

--- a/labs/beta-labs/deploy-res-edge/.kic/check.yaml
+++ b/labs/beta-labs/deploy-res-edge/.kic/check.yaml
@@ -12,3 +12,6 @@ commands:
     - name: webv
       short: Check webv
       path: check/webv
+    - name: prometheus
+      short: Check prometheus
+      path: check/prometheus
