--- a/labs/beta-labs/deploy-res-edge/.kic/check.yaml
+++ b/labs/beta-labs/deploy-res-edge/.kic/check.yaml
@@ -18,3 +18,6 @@ commands:
     - name: grafana
       short: Check grafana
       path: check/grafana
+    - name: mssql
+      short: Check mssql
+      path: check/mssql
