Feature/770 add kic check (#8)
Add kic check commands in deploy-res-edge lab for: mssql, webv, promethus and grafana

---------

Co-authored-by: @renato-marciano , @ehoops-microsoft , @olhakonst17

--- a/labs/beta-labs/deploy-res-edge/.kic/check.yaml
+++ b/labs/beta-labs/deploy-res-edge/.kic/check.yaml
@@ -9,3 +9,12 @@ commands:
     - name: resedge
       short: Check ResEdge
       path: check/app
+    - name: webv
+      short: Check webv
+      path: check/webv
+    - name: mssql
+      short: Check mssql
+      path: check/mssql
+    - name: fluentbit
+      short: Check fluentbit
+      path: check/fluentbit
