renamed app to resedge for the check command

--- a/labs/beta-labs/deploy-res-edge/.kic/check.yaml
+++ b/labs/beta-labs/deploy-res-edge/.kic/check.yaml
@@ -8,7 +8,7 @@ commands:
   scriptCommands:
     - name: resedge
       short: Check ResEdge
-      path: check/app
+      path: check/resedge
     - name: webv
       short: Check webv
       path: check/webv
