replaced bartr reference with cse-labs

--- a/labs/beta-labs/kustomize/apps/imdb/kustomize/prod/base/deployment.yaml
+++ b/labs/beta-labs/kustomize/apps/imdb/kustomize/prod/base/deployment.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
         - name: app
-          image: ghcr.io/bartr/imdb:1.0.0
+          image: ghcr.io/cse-labs/imdb:1.0.0
           imagePullPolicy: Always
           args:
             - --in-memory
