Adding groups commands

--- a/labs/beta-labs/kustomize/.kic/resedge.yaml
+++ b/labs/beta-labs/kustomize/.kic/resedge.yaml
@@ -24,3 +24,9 @@ commands:
     - name: show
       short: Show policy metadata
       path: resedge/policies-show
+  - name: groups
+    short:  Groups commands
+    scriptCommands:
+    - name: show
+      short: Show group metadata
+      path: resedge/groups-show
