--- a/labs/beta-labs/kustomize/.kic/resedge.yaml
+++ b/labs/beta-labs/kustomize/.kic/resedge.yaml
@@ -30,3 +30,9 @@ commands:
     - name: show
       short: Show group metadata
       path: resedge/groups-show
+  - name: applications
+    short:  Applications commands
+    scriptCommands:
+    - name: show
+      short: Show application metadata
+      path: resedge/applications-show
