Renamed variable to KIC_DATASERVICE_URL

--- a/labs/beta-labs/res-edge-labs/.kic/webv-config.yaml
+++ b/labs/beta-labs/res-edge-labs/.kic/webv-config.yaml
@@ -3,7 +3,7 @@
 ###
 
 image: ghcr.io/cse-labs/res-edge-webv:beta
-server:  "${KIC_DATA_SERVICE}"
+server:  "${KIC_DATASERVICE_URL}"
 logformat: TsvMin
 verbose: false
 verboseerrors: false
