--- a/labs/beta-labs/res-edge-labs/.kic/webv-config.yaml
+++ b/labs/beta-labs/res-edge-labs/.kic/webv-config.yaml
@@ -3,7 +3,7 @@
 ###
 
 image: ghcr.io/cse-labs/res-edge-webv:beta
-server:  http://localhost:32080
+server:  "${KIC_DATASERVICE_URL}"
 logformat: TsvMin
 verbose: false
 verboseerrors: false
