adding remaining list commands

--- a/labs/beta-labs/res-edge-labs/.kic/clusters.yaml
+++ b/labs/beta-labs/res-edge-labs/.kic/clusters.yaml
@@ -9,3 +9,6 @@ commands:
   - name: show
     short: Show cluster information
     path: clusters/show
+  - name: list
+    short: Search and list clusters
+    path: clusters/list
