--- a/labs/beta-labs/res-edge-labs/.kic/policies.yaml
+++ b/labs/beta-labs/res-edge-labs/.kic/policies.yaml
@@ -4,11 +4,11 @@
 
 commands:
 - name: policies
-  short: ResEdge policies commands
+  short: ResEdge Policies commands
   scriptCommands:
   - name: show
-    short: Show policies information
+    short: Show Policy information
     path: policies/show
   - name: list
-    short: Search and list policies
+    short: Search and list Policies
     path: policies/list
