--- a/labs/beta-labs/res-edge-labs/.kic/deploy.yaml
+++ b/labs/beta-labs/res-edge-labs/.kic/deploy.yaml
@@ -7,7 +7,7 @@ commands:
   short: Deploy application
   scriptCommands:
     - name: imdb
-      short: Deploy IMDB application
+      short: Deploy IMDb application
       path: deploy/imdb
     - name: resedge
       short: Deploy Res-Edge Data Service
