--- a/labs/beta-labs/res-edge-labs/.kic/applications.yaml
+++ b/labs/beta-labs/res-edge-labs/.kic/applications.yaml
@@ -4,7 +4,7 @@
 
 commands:
 - name: applications
-  short: ResEdge Applications commands
+  short: Res-Edge Applications commands
   scriptCommands:
   - name: show
     short: Show Application metadata
