updated Res-Edge for consistency

--- a/labs/beta-labs/res-edge-labs/.kic/clusters.yaml
+++ b/labs/beta-labs/res-edge-labs/.kic/clusters.yaml
@@ -1,10 +1,10 @@
 ###
-# Resedge clusters commands
+# Res-Edge clusters commands
 ###
 
 commands:
 - name: clusters
-  short: ResEdge Clusters commands
+  short: Res-Edge Clusters commands
   scriptCommands:
   - name: show
     short: Show Cluster information
