--- a/labs/beta-labs/res-edge-labs/.kic/namespaces.yaml
+++ b/labs/beta-labs/res-edge-labs/.kic/namespaces.yaml
@@ -1,10 +1,10 @@
 ###
-# Resedge namespaces commands
+# Res-Edge namespaces commands
 ###
 
 commands:
 - name: namespaces
-  short: ResEdge Namespaces commands
+  short: Res-Edge Namespaces commands
   scriptCommands:
   - name: show
     short: Show Namespace information
