--- a/labs/beta-labs/res-edge-labs/.kic/policies.yaml
+++ b/labs/beta-labs/res-edge-labs/.kic/policies.yaml
@@ -1,10 +1,10 @@
 ###
-# Resedge policies commands
+# Res-Edge policies commands
 ###
 
 commands:
 - name: policies
-  short: ResEdge Policies commands
+  short: Res-Edge Policies commands
   scriptCommands:
   - name: show
     short: Show Policy information
