update url and singularity

--- a/labs/beta-labs/res-edge-labs/.kic/applications.yaml
+++ b/labs/beta-labs/res-edge-labs/.kic/applications.yaml
@@ -7,7 +7,7 @@ commands:
   short: Res-Edge Applications commands
   scriptCommands:
   - name: show
-    short: Show Applications information
+    short: Show Application information
     path: applications/show
   - name: list
     short: Search and list Applications
