Feature/782 improve kustomize lab list (#35)
* Initial commit

* adding res-edge commands

* Adding groups commands

* Adding app commands

* Removing debug url

* CODE: move help to boostrap script and update core show commands to use bootstrap

* Modifying entity show

* Moving apps show

* Updating entity-show

* Implementing apps list

* Showing the whole response

* Adding commands

* adding remaining list commands

* implement long commands

* add group option to groups list

* update description of commands and URL variable

* update Res-Edge

* Update labs/beta-labs/res-edge-labs/.kic/groups.yaml

Co-authored-by: madossan01 <marcia.santos@microsoft.com>

* Feature/782 update lab readmes (#37)

* Updating branch with only my-branch changes (#26)

* update readme with new kic command information

* adding additional information foe new commands

* DOC: update Beta labs links

* DOC: add Lab to the lab name and fix ResEdge to Res-Edge

* DOC: fix ResEdge to Res-Edge

* DOC: fix IMDB by IMDb

* DOC: change data service to Res-Edge data service

* Update labs/beta-labs/res-edge-labs/querying-specific-data.md

* Features/782 adding show commands (#24)

* Initial commit

* adding res-edge commands

* Adding groups commands

* Adding app commands

* Removing debug url

* CODE: move help to boostrap script and update core show commands to use bootstrap

* Modifying entity show

* Moving apps show

* Updating entity-show

* Adding commands

* Adding KIC_DATASERVICE_URL reference

* Updating to pascalcase

* updated Res-Edge for consistency

* updating readmes and adding additional information

* updating linting issues and code

* update url and singularity

Co-authored-by: mahomedalid <mictlan@gmail.com>
Co-authored-by: madossan01 <marcia.santos@microsoft.com>
Co-authored-by: mahomedalid <maho.pacheco@microsoft.com>
Co-authored-by: Yani Ariunbold <113068294+yanichka99@users

--- a/labs/beta-labs/res-edge-labs/.kic/policies.yaml
+++ b/labs/beta-labs/res-edge-labs/.kic/policies.yaml
@@ -1,5 +1,5 @@
 ###
-# Res-Edge policies commands
+# Res-Edge Policies commands
 ###
 
 commands:
@@ -9,3 +9,6 @@ commands:
   - name: show
     short: Show Policy information
     path: policies/show
+  - name: list
+    short: Search and list Policies
+    path: policies/list
