--- a/labs/beta-labs/res-edge-labs/.kic/applications.yaml
+++ b/labs/beta-labs/res-edge-labs/.kic/applications.yaml
@@ -1,5 +1,5 @@
 ###
-# Res-Edge applications commands
+# Res-Edge Applications commands
 ###
 
 commands:
@@ -7,5 +7,8 @@ commands:
   short: Res-Edge Applications commands
   scriptCommands:
   - name: show
-    short: Show Application metadata
+    short: Show Application information
     path: applications/show
+  - name: list
+    short: Search and list Applications
+    path: applications/list
