--- a/labs/beta-labs/res-edge-labs/.kic/clusters.yaml
+++ b/labs/beta-labs/res-edge-labs/.kic/clusters.yaml
@@ -1,5 +1,5 @@
 ###
-# Res-Edge clusters commands
+# Res-Edge Clusters commands
 ###
 
 commands:
@@ -9,3 +9,6 @@ commands:
   - name: show
     short: Show Cluster information
     path: clusters/show
+  - name: list
+    short: Search and list Clusters
+    path: clusters/list
