--- a/labs/beta-labs/res-edge-labs/.kic/namespaces.yaml
+++ b/labs/beta-labs/res-edge-labs/.kic/namespaces.yaml
@@ -1,5 +1,5 @@
 ###
-# Res-Edge namespaces commands
+# Res-Edge Namespaces commands
 ###
 
 commands:
@@ -9,3 +9,6 @@ commands:
   - name: show
     short: Show Namespace information
     path: namespaces/show
+  - name: list
+    short: Search and list Namespaces
+    path: namespaces/list
