--- a/apps/heartbeat/app.yaml
+++ b/apps/heartbeat/app.yaml
@@ -1,15 +1,16 @@
 app: heartbeat
-containerArgs: [ ]
-environment: dev
-image: ghcr.io/cse-labs/heartbeat:latest
-namespace: heartbeat
-port: 8080
-targets: [ all ]
-template: pib-service
+containerArgs: []
 cpuLimit: 100m
 cpuRequest: 100m
+environment: dev
+image: ghcr.io/cse-labs/heartbeat:latest
 ingressPrefix: /heartbeat
 livenessProbe: /healthz
 memoryLimit: 64Mi
 memoryRequest: 64Mi
+namespace: heartbeat
+port: 8080
 readinessProbe: /readyz
+targets:
+    - all
+template: pib-service
