--- a/apps/heartbeat/kustomize/prod/base/kustomization.yaml
+++ b/apps/heartbeat/kustomize/prod/base/kustomization.yaml
@@ -1,7 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
+metadata:
+  annotations:
+    clusters: all
+
 resources:
-  - namespace.yaml
-  - pvc.yaml
   - deployment.yaml
   - service.yaml
+  - ingress.yaml
