--- a/apps/heartbeat/kustomize/prod/base/service.yaml
+++ b/apps/heartbeat/kustomize/prod/base/service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis
-  namespace: redis
+  name: heartbeat
+  namespace: heartbeat
 spec:
   type: ClusterIP
   ports:
-    - port: 6379
+    - port: 8080
       targetPort: http
       protocol: TCP
       name: http
   selector:
-    app: redis
+    app: heartbeat
