--- a/apps/redis/kustomize/prod/base/redis.yaml
+++ b/apps/redis/kustomize/prod/base/redis.yaml
@@ -56,3 +56,20 @@ spec:
           #   httpGet:
           #     path: /healthz
           #     port: 8080
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: redis
+  namespace: redis
+spec:
+  type: ClusterIP
+  ports:
+    - port: 6379
+      targetPort: http
+      protocol: TCP
+      name: http
+  selector:
+    app: redis
