--- a/labs/res-edge-labs/kustomize/apps/heartbeat/kustomize/prod/base/ingress.yaml
+++ b/labs/res-edge-labs/kustomize/apps/heartbeat/kustomize/prod/base/ingress.yaml
@@ -12,9 +12,9 @@ spec:
   tls:
   - secretName: heartbeat
     hosts:
-    - ist.cluster.domain
+    - ist.cluster.store.res-edge.com
   rules:
-  - host: ist.cluster.domain
+  - host: ist.cluster.store.res-edge.com
     http:
       paths:
       - pathType: Prefix
