--- a/labs/res-edge-labs/deploy-res-edge/api/deployment.yaml
+++ b/labs/res-edge-labs/deploy-res-edge/api/deployment.yaml
@@ -20,7 +20,7 @@ spec:
       terminationGracePeriodSeconds: 30
       containers:
       - name: app
-        image: ghcr.io/cse-labs/res-edge:beta
+        image: ghcr.io/cse-labs/res-edge0.9
         imagePullPolicy: Always
         ports:
           - name: http
