--- a/apps/imdb/kustomize/prod/base/service.yaml
+++ b/apps/imdb/kustomize/prod/base/service.yaml
@@ -6,7 +6,10 @@ metadata:
 spec:
   selector:
     app: imdb
+  type: NodePort
   ports:
-    - protocol: TCP
-      port: 8080
-      targetPort: 8080
+    - port: 8080
+      nodePort: 30080
+      targetPort: http
+      protocol: TCP
+      name: http
