--- a/clusters/central-la-nola-2303/imdb/imdb.yaml
+++ b/clusters/central-la-nola-2303/imdb/imdb.yaml
@@ -5,11 +5,14 @@ metadata:
   namespace: imdb
 spec:
   ports:
-  - port: 8080
+  - name: http
+    nodePort: 30080
+    port: 8080
     protocol: TCP
-    targetPort: 8080
+    targetPort: http
   selector:
     app: imdb
+  type: NodePort
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -68,30 +71,3 @@ spec:
           requests:
             cpu: 500m
             memory: 1024Mi
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  annotations:
-    cert-manager.io/cluster-issuer: letsencrypt-prod
-    ingress.kubernetes.io/force-ssl-redirect: "true"
-    kubernetes.io/ingress.class: contour
-    kubernetes.io/tls-acme: "true"
-  name: imdb
-  namespace: imdb
-spec:
-  rules:
-  - host: central-la-nola-2303.res-edge.com
-    http:
-      paths:
-      - backend:
-          service:
-            name: imdb
-            port:
-              number: 8080
-        path: /imdb
-        pathType: Prefix
-  tls:
-  - hosts:
-    - central-la-nola-2303.res-edge.com
-    secretName: imdb
