added kic check heartbeat

--- a/.kic/check.yaml
+++ b/.kic/check.yaml
@@ -37,3 +37,7 @@ commands:
     - name: imdb
       short: Check imdb service
       path: check/imdb
+
+    - name: heartbeat
+      short: Check heartbeat service
+      path: check/heartbeat
