--- a/clusters/east-ga-atl-2302/heartbeat/heartbeat.yaml
+++ b/clusters/east-ga-atl-2302/heartbeat/heartbeat.yaml
@@ -6,12 +6,13 @@ metadata:
 spec:
   ports:
   - name: http
+    nodePort: 30088
     port: 8080
     protocol: TCP
     targetPort: http
   selector:
     app: heartbeat
-  type: ClusterIP
+  type: NodePort
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -64,29 +65,3 @@ spec:
           requests:
             cpu: 200m
             memory: 64Mi
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  annotations:
-    cert-manager.io/cluster-issuer: letsencrypt-prod
-    ingress.kubernetes.io/force-ssl-redirect: "true"
-    kubernetes.io/ingress.class: contour
-  name: heartbeat
-  namespace: heartbeat
-spec:
-  rules:
-  - host: east-ga-atl-2302.res-edge.com
-    http:
-      paths:
-      - backend:
-          service:
-            name: heartbeat
-            port:
-              number: 8080
-        path: /heartbeat
-        pathType: Prefix
-  tls:
-  - hosts:
-    - east-ga-atl-2302.res-edge.com
-    secretName: heartbeat
