--- a/.kic/k3d.yaml
+++ b/.kic/k3d.yaml
@@ -32,6 +32,15 @@ ports:
   port: 30080:30080
 - nodeFilters:
   - server:0
+  port: 30088:30088
+- nodeFilters:
+  - server:0
+  port: 31080:31080
+- nodeFilters:
+  - server:0
+  port: 31088:31088
+- nodeFilters:
+  - server:0
   port: 31433:31433
 - nodeFilters:
   - server:0
@@ -39,6 +48,9 @@ ports:
 - nodeFilters:
   - server:0
   port: 32080:32080
+- nodeFilters:
+  - server:0
+  port: 32088:32088
 registries: {}
 servers: 1
 volumes:
