--- a/clusters/central-la-nola-2301/flux-system/flux-kustomization.yaml
+++ b/clusters/central-la-nola-2301/flux-system/flux-kustomization.yaml
@@ -1,12 +1,11 @@
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: redis
+  name: flux-system
   namespace: flux-system
 spec:
   interval: 1m0s
-  path: ./clusters/central-la-nola-2301/redis
+  path: ./clusters/central-la-nola-2301/flux-system/listeners
   prune: true
   sourceRef:
     kind: GitRepository
