--- a/clusters/central-la-nola-2301/flux-system/kustomization.yaml
+++ b/clusters/central-la-nola-2301/flux-system/kustomization.yaml
@@ -1,9 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- gotk-components.yaml
-- gotk-sync.yaml
-- listeners/kustomization-heartbeat.yaml
-- listeners/kustomization-imdb.yaml
-- listeners/kustomization-namespaces.yaml
-- listeners/kustomization-redis.yaml
+- components.yaml
+- source.yaml
+- listeners/flux-kustomize.yaml
