--- a/clusters/west-ca-sd-2302/flux-system/namespace.yaml
+++ b/clusters/west-ca-sd-2302/flux-system/namespace.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.30.2
+    app.kubernetes.io/version: v2.0.0-rc.2
     pod-security.kubernetes.io/warn: restricted
     pod-security.kubernetes.io/warn-version: latest
   name: flux-system
