--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -58,8 +58,10 @@
 		"30080": { "label": "MyApp" },
 		"30088": { "label": "heartbeat" },
 		"31080": { "label": "IMDb" },
+		"31088": { "label": "dogs-cats" },
 		"32000": { "label": "Grafana" },
-		"32080": { "label": "Res-Edge" }
+		"32080": { "label": "Res-Edge" },
+		"32088": { "label": "tabs-spaces" }
 	},
 
 	"waitFor": "postCreateCommand",
