--- a/apps/tabs-spaces/kustomize/prod/base/service.yaml
+++ b/apps/tabs-spaces/kustomize/prod/base/service.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: dogs-cats
-  namespace: dogs-cats
+  name: tabs-spaces
+  namespace: tabs-spaces
 spec:
   selector:
-    app: dogs-cats
+    app: tabs-spaces
 
   type: NodePort
   ports:
     - port: 8080
-      nodePort: 31088
+      nodePort: 32088
       targetPort: http
       protocol: TCP
       name: http
