--- a/apps/dogs-cats/kustomize/prod/base/ingress.yaml
+++ b/apps/dogs-cats/kustomize/prod/base/ingress.yaml
@@ -13,9 +13,9 @@ spec:
   tls:
   - secretName: dogs-cats
     hosts:
-    - ist.cluster.store.res-edge.com
+    - rea.cluster.store.res-edge.com
   rules:
-  - host: ist.cluster.store.res-edge.com
+  - host: rea.cluster.store.res-edge.com
     http:
       paths:
       - pathType: Prefix
