--- a/apps/go-vote/kustomize/prod/base/ingress.yaml
+++ b/apps/go-vote/kustomize/prod/base/ingress.yaml
@@ -1,8 +1,8 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: tabs-spaces
-  namespace: tabs-spaces
+  name: rea.application.name
+  namespace: rea.namespace.name
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
     ingress.kubernetes.io/force-ssl-redirect: "true"
@@ -11,18 +11,17 @@ metadata:
 
 spec:
   tls:
-  - secretName: tabs-spaces
+  - secretName: rea.application.name
     hosts:
     - rea.cluster.store.res-edge.com
-
   rules:
   - host: rea.cluster.store.res-edge.com
     http:
       paths:
       - pathType: Prefix
-        path: /tabs-spaces
+        path: /rea.application.name
         backend:
           service:
-            name: tabs-spaces
+            name: rea.application.name
             port:
               number: 8080
