--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -44,16 +44,24 @@
 	"forwardPorts": [
 		30000,
 		30080,
+		30088,
+		31080,
+		31088,
 		32000,
-		32080
+		32080,
+		32088
 	],
 
 	// add labels
 	"portsAttributes": {
 		"30000": { "label": "Prometheus" },
 		"30080": { "label": "MyApp" },
+		"30088": { "label": "heartbeat" },
+		"31080": { "label": "IMDb" },
+		"31088": { "label": "dogs-cats" },
 		"32000": { "label": "Grafana" },
-		"32080": { "label": "Res-Edge" }
+		"32080": { "label": "Res-Edge" },
+		"32088": { "label": "tabs-spaces" }
 	},
 
 	"waitFor": "postCreateCommand",
