--- a/.kic/root.yaml
+++ b/.kic/root.yaml
@@ -3,6 +3,10 @@
 ###
 
 scriptCommands:
+  - name: env
+    short: Display CLI environment variables
+    path: env
+
   - name: sync
     short: Force Flux reconcile
     path: sync
