--- a/apps/flux-system/source.yaml
+++ b/apps/flux-system/source.yaml
@@ -7,6 +7,11 @@ spec:
   interval: 1m0s
   secretRef:
     name: flux-system
+
+# update these values to your repo and branch
+# run "ds cicd" to update the Cluster manifests
+# run "ds deploy" to push the GitOps changes to GitHub
+
   url: https://github.com/cse-labs/res-edge-labs
   ref:
     branch: main
